# mzdata-wasm

./: .gitignore  Cargo.toml  Justfile  README.md  index.html  snapshot.html
app/: README.md  index.html  mzdata-viewer.html  package-lock.json  package.json  tsconfig.app.json  vite.config.lib.ts  vite.config.ts
app/src/: App.tsx  DataFileChooser.tsx  Exports.tsx  Instructions.tsx  ProcessingConfig.tsx  SpectrumList.css  SpectrumList.tsx  index.ts  main.tsx  util.tsx
app/src/canvas/: canvas.ts  component.css  component.tsx  index.ts  layers.ts
desktop/mzdata-viewer/: README.md
desktop/mzdata-viewer/frontend/: package-lock.json  package.json  vite.config.ts
desktop/mzdata-viewer/frontend/src/: App.css  App.tsx  Canvas.tsx  DataFileChooser.tsx  SpectrumList.tsx  ViewerState.tsx  reader.ts
desktop/mzdata-viewer/src-tauri/: Cargo.toml  tauri.conf.json
desktop/mzdata-viewer/src-tauri/src/: lib.rs  main.rs  ms_dialog.rs
lib/: index.html  index.ts  package-lock.json  package.json  tsconfig.json  vite.config.js  webpack.config.cjs
lib/src/: index.ts  mem_reader.ts
src/: asyncio.rs  binds.rs  lib.rs  mem_reader.rs  mem_writer.rs  webio.rs  worker_reader.rs
