[package]
name = "mzdata-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.99"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

js-sys = "0.3.76"
web-sys = { version = "0.3.76", features = [
    "Blob",
    "FileReader",
    "Event",
    "EventTarget",
    "HtmlInputElement",
    "FileList",
    "File",
    "FileReaderSync",
    "ReadableStreamDefaultReader",
    "ReadableStream",
] }

mzdata = { version = "0.41.0", default-features = false, features = [
    "mzsignal",
    'nalgebra',
    "serde"
] }

mzpeaks = "1.0"
chemical_elements = "0.5.0"
mzdeisotope = { version = "0.2.5", features = ["serde"]}
wasm-logger = "0.2.0"
log = "0.4.20"
mzsignal = { version = "1.0", default-features = false, features = ["nalgebra", "serde"]}
serde = { version = "1.0.217", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# # Tell `rustc` to optimize for small code size.
# opt-level = "s"
opt-level = 3
debug = true
